[project]
name = "ogmem-rag-mcp"
version = "0.1.0"
description = "MCP server that lets any agent query a remote oG-Memory knowledge base with just OGMEM_API_URL + OGMEM_API_TOKEN"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PoivronMax" }]
keywords = ["mcp", "rag", "og-memory", "knowledge-base", "retrieval"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/PoivronMax/oG-Memory-RAG"

[project.scripts]
ogmem-rag-mcp = "ogmem_rag_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ogmem_rag_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
